# gmail_mbox_viewer

./: .gitignore  GEMINI.md  README.md  README_EN.md  cpybinaries.ps1  cpybinaries.sh  justfile  package-lock.json  settingsample.toml
backend/: Cargo.toml
backend/src/: api.rs  lib.rs  main.rs  model.rs  settings.rs  state.rs
frontend/: build.cmd  index.html  package-lock.json  package.json  start_frontend.cmd
frontend/src/: App.svelte  app.css
frontend/src/components/: FileSystemPicker.svelte  Header.svelte  LayoutSelector.svelte  ListHeader.svelte  Management.svelte  MessageDetail.svelte  MessageList.svelte  SearchPopup.svelte  Sidebar.svelte
frontend/src/lib/: api.js
launcher/: build.sh  package-lock.json  package.json
launcher/src/: converter.html  converter.js  index.html  main.js  styles.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/src/: lib.rs
tools/mbox2zip/: Cargo.toml  start.sh
tools/mbox2zip/src/: db.rs  lib.rs  main.rs  parser.rs
