[package]
name = "backend"
version = "0.3.0"
authors = ["Detlef Meyer"]
license = "MIT"
edition = "2021"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# ... existing dependencies are fine ...
axum = { version = "0.7.9", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", features = ["time"] }  # Updated to newer version if possible, but keeping 0.6 is safe
rusqlite = { version = "0.33.0", features = ["bundled", "backup"] }
mail-parser = { version = "0.9", features = ["serde"] }
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
quoted_printable = "0.5"
once_cell = "1.18"
regex = "1.10"
tempfile = "3.25.0"
rfd = "0.15"
# Local conversion logic
mbox2zip = { path = "../tools/mbox2zip" }
