[package]
name = "mbox2zip"
version = "0.3.0"
edition = "2021"

[lib]
name = "mbox2zip"
path = "src/lib.rs"

[[bin]]
name = "mbox2zip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
zip = { version = "0.6", features = ["time"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
mail-parser = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
quoted_printable = "0.5"
once_cell = "1.18"
regex = "1.10"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.8"
walkdir = "2.4"
